<resources>
    <string name="app_name">Motion</string>
    <string name="gift">Gift</string>
    <string name="wallet">Wallet</string>
    <string name="main_menu">Main menu</string>
    <string name="dialog">Dialog</string>
    <string name="account">Account</string>
    <string name="image_details">Image Details</string>
    <string name="twitter">Twitter</string>
    <string name="title_main">My income</string>
    <string name="detail_caption_status">Status</string>
    <string name="detail_caption_date">Date</string>
    <string name="detail_caption_amount">Amount</string>
    <string name="action_back">Back</string>
    <string name="correct">Correct</string>
</resources>
