<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_small"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="@dimen/card_elevation"
    app:contentPadding="@dimen/padding_normal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_card"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:contentDescription="@string/twitter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/img_twitter" />

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="@id/image_card"
            app:layout_constraintStart_toEndOf="@id/image_card"
            app:layout_constraintTop_toTopOf="@id/image_card"
            tools:text="Twitter" />

        <TextView
            android:id="@+id/title_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/detail_caption_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="@id/image_card"
            app:layout_constraintTop_toBottomOf="@id/image_card" />

        <TextView
            android:id="@+id/title_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_caption_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="@id/title_amount"
            app:layout_constraintStart_toStartOf="@+id/guideline_0"
            app:layout_constraintTop_toTopOf="@id/title_amount" />

        <TextView
            android:id="@+id/title_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_caption_status"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="@id/title_date"
            app:layout_constraintStart_toStartOf="@+id/guideline_1"
            app:layout_constraintTop_toTopOf="@id/title_date" />

        <TextView
            android:id="@+id/item_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_tiny"
            android:textAppearance="@style/DetailsBold.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/title_amount"
            app:layout_constraintTop_toBottomOf="@id/title_amount"
            tools:text="11,550.00" />

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBaseline_toBaselineOf="@id/item_amount"
            app:layout_constraintStart_toStartOf="@id/title_date"
            tools:text="09.07.2019" />

        <TextView
            android:id="@+id/item_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBaseline_toBaselineOf="@id/item_date"
            app:layout_constraintStart_toStartOf="@id/title_status"
            tools:text="Correct" />

        <ImageView
            android:id="@+id/image_status"
            android:layout_width="@dimen/toolbar_icon_size"
            android:layout_height="@dimen/toolbar_icon_size"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:contentDescription="@string/correct"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_correct" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.65" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>